# p2pserver

./: Cargo.toml
src/: main.rs
static/: script.js
