[package]
name = "p2pserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.50", features = [
    "tcp",
    "dns",
    "async-std",
    "noise",
    "yamux",
    "websocket",
    "ping",
    "macros",
] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
rocket ={ version = "0.5.0-rc.1", features = ["json"] }

[dev-dependencies]
rand = "0.8"
